Created pages and routes for different grocery types, created cards for products using bootstrap and handlebars. Database needs more populating, and then it's time to work on users and the shopping cart. Made some real progress today. :)

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,10 +1,55 @@
 <h1>Well, this is a start.</h1>
 
-<ul>
-  {{#each groceries}}
-      {{ name }}
-      {{ price }}
-      {{!-- works like a charm, images are enormous though so disabled for the moment --}}
-      {{!-- <img src={{image}}> --}}
-  {{/each}}
-</ul>
+<a href="/produce">
+  <div class="card" style="width: 18rem;">
+    <img class="card-img-top" src="/images/produce.jpg" alt="Produce">
+    <div class="card-body">
+      <h5 class="card-title">Produce</h5>
+    </div>
+  </div>
+</a>
+
+<a href="/dairy">
+  <div class="card" style="width: 18rem;">
+    <img class="card-img-top" src="/images/dairy.jpg" alt="Dairy">
+    <div class="card-body">
+      <h5 class="card-title">Dairy</h5>
+    </div>
+  </div>
+</a>
+
+<a href="/meat&seafood">
+  <div class="card" style="width: 18rem;">
+    <img class="card-img-top" src="/images/Meat-poultry-seafood.jpg" alt="Meat & seafood">
+    <div class="card-body">
+      <h5 class="card-title">Meat & seafood</h5>
+    </div>
+  </div>
+</a>
+
+<a href="/pantry">
+  <div class="card" style="width: 18rem;">
+    <img class="card-img-top" src="/images/pantry.jpg" alt="Pantry">
+    <div class="card-body">
+      <h5 class="card-title">Pantry</h5>
+    </div>
+  </div>
+</a>
+
+<a href="/bakery">
+  <div class="card" style="width: 18rem;">
+    <img class="card-img-top" src="/images/bakery.jpg" alt="Bakery">
+    <div class="card-body">
+      <h5 class="card-title">Bakery</h5>
+    </div>
+  </div>
+</a>
+
+<a href="/frozen">
+  <div class="card" style="width: 18rem;">
+    <img class="card-img-top" src="/images/frozen.jpg" alt="Frozen">
+    <div class="card-body">
+      <h5 class="card-title">Frozen</h5>
+    </div>
+  </div>
+</a>
