All databases except for Pantry have been populated and cards have been cleaned-up. Next step is putting shopping-cart together, which should be an undertaking. Styling should be left alone now until the logic is completed.

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -4,6 +4,20 @@ body {
   /* background-position: center center; */
 }
 
+.imgCont {
+  width: 286px;
+  height: 286px;
+}
+
+img {
+  background-color: white;
+}
+
 #layer {
   background-color: rgba(173, 216, 230, 0.7);
+}
+
+.row {
+  justify-content: center;
+  align-content: center;
 }
