--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,55 +1,83 @@
 <h1>Well, this is a start.</h1>
 
-<a href="/produce">
-  <div class="card" style="width: 18rem;">
-    <img class="card-img-top" src="/images/produce.jpg" alt="Produce">
-    <div class="card-body">
+<div class="row">
+  <div class="col">
+  <a href="/produce">
+    <div class="card" style="width: 18rem;">
+      <div class="imgCont d-flex">
+        <img class="card-img-top my-auto" src="/images/produce.jpg" alt="Produce">
+      </div>
+      <div class="card-body">
       <h5 class="card-title">Produce</h5>
+      </div>
     </div>
+  </a>
   </div>
-</a>
 
-<a href="/dairy">
-  <div class="card" style="width: 18rem;">
-    <img class="card-img-top" src="/images/dairy.jpg" alt="Dairy">
-    <div class="card-body">
+  <div class="col">
+  <a href="/dairy">
+    <div class="card" style="width: 18rem;">
+      <div class="imgCont d-flex">
+        <img class="card-img-top my-auto" src="/images/dairy.jpg" alt="Dairy">
+      </div>
+      <div class="card-body">
       <h5 class="card-title">Dairy</h5>
+      </div>
     </div>
+  </a>
   </div>
-</a>
 
-<a href="/meat&seafood">
-  <div class="card" style="width: 18rem;">
-    <img class="card-img-top" src="/images/Meat-poultry-seafood.jpg" alt="Meat & seafood">
-    <div class="card-body">
+  <div class="col">
+  <a href="/meat&seafood">
+    <div class="card" style="width: 18rem;">
+      <div class="imgCont d-flex">
+        <img class="card-img-top my-auto" src="/images/Meat-poultry-seafood.jpg" alt="Meat & seafood">
+      </div>
+      <div class="card-body">
       <h5 class="card-title">Meat & seafood</h5>
+      </div>
     </div>
+  </a>
   </div>
-</a>
+</div>
 
-<a href="/pantry">
-  <div class="card" style="width: 18rem;">
-    <img class="card-img-top" src="/images/pantry.jpg" alt="Pantry">
-    <div class="card-body">
+<div class="row">
+  <div class="col">
+  <a href="/pantry">
+    <div class="card" style="width: 18rem;">
+      <div class="imgCont d-flex">
+        <img class="card-img-top my-auto" src="/images/pantry.jpg" alt="Pantry">
+      </div>
+      <div class="card-body">
       <h5 class="card-title">Pantry</h5>
+      </div>
     </div>
+  </a>
   </div>
-</a>
 
-<a href="/bakery">
-  <div class="card" style="width: 18rem;">
-    <img class="card-img-top" src="/images/bakery.jpg" alt="Bakery">
-    <div class="card-body">
+  <div class="col">
+  <a href="/bakery">
+    <div class="card" style="width: 18rem;">
+      <div class="imgCont d-flex">
+        <img class="card-img-top my-auto" src="/images/bakery.jpg" alt="Bakery">
+      </div>
+      <div class="card-body">
       <h5 class="card-title">Bakery</h5>
+      </div>
     </div>
+  </a>
   </div>
-</a>
 
-<a href="/frozen">
-  <div class="card" style="width: 18rem;">
-    <img class="card-img-top" src="/images/frozen.jpg" alt="Frozen">
-    <div class="card-body">
+  <div class="col">
+  <a href="/frozen">
+    <div class="card" style="width: 18rem;">
+      <div class="imgCont d-flex">
+        <img class="card-img-top my-auto" src="/images/frozen.jpg" alt="Frozen">
+      </div>
+      <div class="card-body">
       <h5 class="card-title">Frozen</h5>
+      </div>
     </div>
+  </a>
   </div>
-</a>
+</div>
