--- a/views/dairy.handlebars
+++ b/views/dairy.handlebars
@@ -1,13 +1,19 @@
+<div class="row">
 {{#each groceries}}
   {{#ifCond type "===" "Dairy"}}
+  <div class="col">
     <div class="card" style="width: 18rem;">
-    <img class="card-img-top" src={{image}} alt={{name}} + " image">
+      <div class="imgCont d-flex">
+    <img class="card-img-top my-auto" src={{image}} alt={{name}} + " image">
+      </div>
     <div class="card-body">
       <h5 class="card-title">{{name}}</h5>
-      <p class="card-text">$ {{price}}</p>
+      <p class="card-text">Price: $ {{price}}</p>
       <p class="card-text">In stock: {{inventory}}</p>
       <a href="#" class="btn btn-primary">Add to cart</a>
+    </div>
     </div>
   </div>
   {{/ifCond}}
   {{/each}}
+</div>
