Making progress on shopping cart, but the POST is broken. Added heavy console logs for debugging.

--- a/views/bakery.handlebars
+++ b/views/bakery.handlebars
@@ -5,11 +5,36 @@
     <img class="card-img-top my-auto" src={{image}} alt={{name}} + " image">
       </div>
     <div class="card-body">
+      <form class="addCart" action="/api/groceries" method="POST">
       <h5 class="card-title">{{name}}</h5>
-      <p class="card-text">Price: $ {{price}}</p>
+      <p class="card-text">Price: ${{price}}</p>
       <p class="card-text">In stock: {{inventory}}</p>
-      <a href="#" class="btn btn-primary">Add to cart</a>
+      <label for="amt">Amount: </label>
+      <input type="number" id="amt" min="1" max={{inventory}} value="1"/>
+      <button type="submit" class="btn btn-primary">Add to cart</a>
+      </form>
     </div>
   </div>
   {{/ifCond}}
   {{/each}}
+
+  <script>
+    console.log("Script begins")
+    $(".addCart").on("submit", function(event) {
+      event.preventDefault();
+      var grocery = {
+        id: $(this).data("id"),
+        amt: $("#amt").val()  
+      };
+      console.log("AJAX begins")
+    $.ajax("/api/groceries", {
+      type: "POST",
+      data: grocery
+    }).then(
+      function() {
+        console.log("hopefully pushed some groceries to cart");
+        location.reload();
+      }
+    )
+    })
+  </script>
