--- a/views/meat.handlebars
+++ b/views/meat.handlebars
@@ -8,6 +8,8 @@
       <h5 class="card-title">{{name}}</h5>
       <p class="card-text">Price: $ {{price}}</p>
       <p class="card-text">In stock: {{inventory}}</p>
+      <label for="amt">Amount: </label>
+      <input type="number" id="amt" min="1" max={{inventory}} value="1"/>
       <a href="#" class="btn btn-primary">Add to cart</a>
     </div>
   </div>
