--- a/views/bakery.handlebars
+++ b/views/bakery.handlebars
@@ -9,6 +9,7 @@
       <h5 class="card-title">{{name}}</h5>
       <p class="card-text">Price: ${{price}}</p>
       <p class="card-text">In stock: {{inventory}}</p>
+      <p class="id_cont" itemid={{id}}></p>
       <label for="amt">Amount: </label>
       <input type="number" id="amt" min="1" max={{inventory}} value="1"/>
       <button type="submit" class="btn btn-primary">Add to cart</a>
@@ -19,14 +20,15 @@
   {{/each}}
 
   <script>
-    console.log("Script begins")
     $(".addCart").on("submit", function(event) {
       event.preventDefault();
       var grocery = {
-        id: $(this).data("id"),
-        amt: $("#amt").val()  
+        id: $(".id_cont").itemid,
+        amt: $("#amt").val()
       };
-      console.log("AJAX begins")
+      console.log("grocery id: " + grocery.id);
+      console.log("Amount: " + grocery.amt);
+      console.log("AJAX begins");
     $.ajax("/api/groceries", {
       type: "POST",
       data: grocery
