Inventory amounts are being changed upon items being added to cart, but not the correct amounts; as it stands the number added to your cart becomes the new amount in inventory.

--- a/views/bakery.handlebars
+++ b/views/bakery.handlebars
@@ -29,6 +29,10 @@
       };
       console.log("grocery id: " + grocery.id);
       console.log("AJAX begins");
+    $.ajax("/api/cart", {
+      type: "POST",
+      data: grocery
+    }).then
     $.ajax("/api/groceries", {
       type: "POST",
       data: grocery
