--- a/views/dairy.handlebars
+++ b/views/dairy.handlebars
@@ -25,11 +25,9 @@
   <script>
     $(".wrap").on("submit", function(event) {
       event.preventDefault();
-      let amt = $(this).context.elements[0].value
-      console.log(amt);
       var grocery = {
         id: $(this).data("id"),
-        amt: amt
+        amt: $(this).context.elements[0].value
       };
       console.log("grocery id: " + grocery.id);
       console.log("AJAX begins");
