Items added to cart are now being subtracted from inventory properly. Moved cart population logic to static folder and loaded the script at the bottom of main html, much cleaner and follows best practice. Next steps are summing the total price of the items in the cart, and inventory repopulation for abandoned/cancelled carts.

--- a/views/dairy.handlebars
+++ b/views/dairy.handlebars
@@ -7,7 +7,7 @@
     <img class="card-img-top my-auto" src={{image}} alt={{name}} + " image">
       </div>
     <div class="card-body">
-      <form class="wrap" data-id="{{id}}">
+      <form class="wrap" data-id="{{id}}" data-inv="{{inventory}}">
       <h5 class="card-title">{{name}}</h5>
       <p class="card-text">Price: ${{price}}</p>
       <p class="card-text">In stock: {{inventory}}</p>
@@ -21,24 +21,3 @@
   {{/ifCond}}
   {{/each}}
 </div>
-
-  <script>
-    $(".wrap").on("submit", function(event) {
-      event.preventDefault();
-      var grocery = {
-        id: $(this).data("id"),
-        amt: $(this).context.elements[0].value
-      };
-      console.log("grocery id: " + grocery.id);
-      console.log("AJAX begins");
-    $.ajax("/api/groceries", {
-      type: "POST",
-      data: grocery
-    }).then(
-      function() {
-        console.log("hopefully pushed some groceries to cart");
-        location.reload();
-      }
-    )
-    })
-  </script>
