--- a/views/produce.handlebars
+++ b/views/produce.handlebars
@@ -2,10 +2,10 @@
   {{#ifCond type "===" "Produce"}}
     <div class="card" style="width: 18rem;">
       <div class="imgCont d-flex">
-    <img class="card-img-top my-atuo" src={{image}} alt={{name}} + " image">
+    <img class="card-img-top my-auto" src={{image}} alt={{name}} + " image">
       </div>
     <div class="card-body">
-      <form class="wrap" data-id="{{id}}">
+      <form class="wrap" data-id="{{id}}" data-inv="{{inventory}}">
       <h5 class="card-title">{{name}}</h5>
       <p class="card-text">Price: ${{price}}</p>
       <p class="card-text">In stock: {{inventory}}</p>
@@ -17,26 +17,3 @@
   </div>
   {{/ifCond}}
   {{/each}}
-
-    <script>
-    $(".wrap").on("submit", function(event) {
-      event.preventDefault();
-      let amt = $(this).context.elements[0].value
-      console.log(amt);
-      var grocery = {
-        id: $(this).data("id"),
-        amt: amt
-      };
-      console.log("grocery id: " + grocery.id);
-      console.log("AJAX begins");
-    $.ajax("/api/groceries", {
-      type: "POST",
-      data: grocery
-    }).then(
-      function() {
-        console.log("hopefully pushed some groceries to cart");
-        location.reload();
-      }
-    )
-    })
-  </script>
