Wrote a route to get both the cart db and groceries db on the cart page. Working out how to associate the two inside of handlebars partials.

--- a/views/cart.handlebars
+++ b/views/cart.handlebars
@@ -1,4 +1,6 @@
 {{#each purchases}}
   <div>{{grocery_id}}, {{amt}}</div>
 {{/each}}
-
+{{#each groceries}}
+  <div>{{name}}, {{price}}</div>
+{{/each}}
