--- a/views/cart.handlebars
+++ b/views/cart.handlebars
@@ -18,7 +18,8 @@
   for (let i=0; i < cartItems.length; i++) {
     for (let x=0; x < inventory.length; x++) {
       if (cartItems[i].grocery_id === inventory[x].id){
-        let item = { 
+        let item = {
+          id: inventory[x].id,
           name: inventory[x].name,
           amt: cartItems[i].amt,
           price: (inventory[x].price * cartItems[i].amt)
@@ -28,10 +29,9 @@
       }
     }
   }
-  console.log(listCont)
   //string.concat doesn't change the initial string. Going to have to find another way to pull this off.
-  listCont.forEach(object => listText += ("<li>" + object.name + " x " + object.amt + " : " + object.price + "</li>"))
+  //ok, used the plusEquals argument to append everything together. However early testing of the submit buttons has revealed that I have to build every item as an individual form. Need to rewrap them as forms within list items.
+  listCont.forEach(object => listText += ("<li> <form class='cartItem' id='" + object.id + "'>" + object.name + " x " + "<input type='number' class='amt' min='1' max='" + object.amt + "' value='" + object.amt + "'/>" + " : " + object.price + "<button class='btn btn-primary' type='submit'><i class='fas fa-times-circle'></i></button></form></li>"))
   listText += "<li id='total'> Total: " + listTot + "</li>"
-  console.log(listText)
   cartList.innerHTML = listText;
 </script>
