--- a/views/cart.handlebars
+++ b/views/cart.handlebars
@@ -2,10 +2,12 @@
   <ul id="cartList">
   </ul>
 </div>
+<button id="purge" type="submit">Blow this cart away!</button>
 
 <script>
   $(document).ready();
-  let cartList = document.getElementById("cartList")
+  let p = document.getElementById("purge");
+  let cartList = document.getElementById("cartList");
   let listText = "";
   let listCont = [];
   let listTot = 0;
@@ -30,8 +32,11 @@
     }
   }
   //string.concat doesn't change the initial string. Going to have to find another way to pull this off.
-  //ok, used the plusEquals argument to append everything together. However early testing of the submit buttons has revealed that I have to build every item as an individual form. Need to rewrap them as forms within list items.
+  if(listCont.length === 0){
+    cartList.innerHTML = "Your cart is empty!"
+  }else{
+  console.log(listCont);//ok, used the plusEquals argument to append everything together. However early testing of the submit buttons has revealed that I have to build every item as an individual form. Need to rewrap them as forms within list items.
   listCont.forEach(object => listText += ("<li> <form class='cartItem' id='" + object.id + "'>" + object.name + " x " + "<input type='number' class='amt' min='1' max='" + object.amt + "' value='" + object.amt + "'/>" + " : " + object.price + "<button class='btn btn-primary' type='submit'><i class='fas fa-times-circle'></i></button></form></li>"))
   listText += "<li id='total'> Total: " + listTot + "</li>"
-  cartList.innerHTML = listText;
+  cartList.innerHTML = listText;}
 </script>
