Added a navbar link to sign-in page, a sign-in page, and a sign-up page. Next steps are database design for users, routes to populate that table and encrypting passwords.

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -33,6 +33,7 @@
           <div class="dropdown-divider"></div>
           <a class="dropdown-item" href="#">Something else here</a>
         </div>
+        <a href="/login">sign up / sign in</a>
       </li>
     </ul>
   </div>
