--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -1,1 +1,31 @@
-<p>Signup page</p>
+<div class="col">
+    <div class="card" style="width: 18rem;">
+      <div class="card-body">
+<form>
+  <label for="#name">User name: </label>
+  <input id="name" type="text" name="name">
+  <label for="#email">Email address: </label>
+  <input id="email" type="email" name="email">
+  <label for="#password">Password: </label>
+  <input id="password" type="password" name="password">
+  <button id="submit" type="submit">Submit</button>
+  </form>
+  </div>
+  </div>
+  </div>
+
+  <script>
+
+  // beginnings of a user check, should probably implement this on sign-in first since we have a user already
+  
+  // $.ajax("/api/userCheck", {type: "GET",}
+
+  $("#submit").on("submit", function(event) {
+    event.preventDefault()
+    let name = document.getElementById("#name");
+    let email = document.getElementById("#email");
+    let password = document.getElementById("#password");
+
+  })
+
+  </script>
